@@ -37,6 +37,9 @@ PHP                                                                        NEWS
   . Fixed bug GH-12297 (PHP Startup: Invalid library (maybe not a PHP library)
     'mysqlnd.so' in Unknown on line). (nielsdos)
 
+- Opcache:
+  . Fixed opcache_invalidate() on deleted file. (mikhainin)
+
 - PCRE:
   . Fixed bug GH-11956 (Backport upstream fix, PCRE regular expressions with
     JIT enabled gives different result). (nielsdos)
